--- a/images.html
+++ b/images.html
@@ -10,8 +10,8 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>Gallery Hub</h1>
-            <h2>Share your moments, memories and creativity with us.</h2>
+            <h1>Coat Of Arms Hub</h1>
+            <h2>Share your legacy, memories and creativity with us.</h2>
         </div>
         <div class="content">
             <div class="choose">
