--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
     <div class="container">
         <div class="header">
-            <h1>Gallery Hub</h1>
-            <h2>Share your moments, memories and creativity with us.</h2>
+            <h1>Coat Of Arms Hub</h1>
+            <h2>Share your legacy, memories and creativity with us.</h2>
             <button><a href="upload_form.html">Start Sharing</a></button>
         </div>
         <div class="animals">
